--- a/package.yaml
+++ b/package.yaml
@@ -33,7 +33,9 @@ library:
     - OverloadedStrings
   dependencies:
     - text
+    - bytestring
     - wreq
+    - lens
 
 executables:
   hs-otw-exe:
