--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ library:
     - TypeApplications
     - ViewPatterns
     - TupleSections
+    - LambdaCase
     - OverloadedStrings
   dependencies:
     - text
