make accessing challenges done automagically by integers and TH

--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,8 @@ library:
     - LambdaCase
     - OverloadedStrings
   dependencies:
+    - template-haskell
+    - containers
     - text
     - bytestring
     - wreq
