--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ library:
     - base64-bytestring
     - bytestring
     - containers
+    - filepath
     - hexstring
     - http-client
     - http-types
