--- a/package.yaml
+++ b/package.yaml
@@ -24,7 +24,12 @@ dependencies:
 
 library:
   source-dirs: src
-  ghc-options: -Wall -fno-warn-unused-top-binds
+  ghc-options:
+    - -Wall
+    - -Wcompat
+    - -Wincomplete-record-updates
+    - -Wincomplete-uni-patterns
+    - -Wredundant-constraints
   default-extensions:
     - LambdaCase
   dependencies:
